tests/sksl/errors/ReservedNamePrecision.glsl
### Compilation failed:

error: 1: 'precision' is a reserved word
1 error
